--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,9 @@ License: GPLv3
 LazyData: true
 Encoding: UTF-8
 Collate:
+    'StfwfSchema-class.R'
     'fread_fwf.R'
-RoxygenNote: 5.0.1
+RoxygenNote: 6.1.0
 URL: https://github.com/david-salgado/freadfwf
 BugReports: https://github.com/david-salgado/freadfwf/issues
 Suggests:
