--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,8 @@ Version: 0.1.0
 Authors@R: c(
     person("David", "Salgado", email = "david.salgado.fernandez@gmail.com", role = c("cre", "aut")),
     person("Jara", "Poch", email = "jarapoch@gmail.com", role = "aut"))
-Description: This package provides a fast function to read fixed-width files using an input schema
+Description: This package provides a fast function to read fixed-width files
+    using an input schema
 Depends:
     R (>= 3.3.2)
 Imports:
@@ -17,8 +18,10 @@ LazyData: true
 Encoding: UTF-8
 Collate:
     'StfwfSchema-class.R'
+    'XLSToSchema.R'
     'fread_fwf.R'
-RoxygenNote: 6.1.0
+    'getdf.R'
+RoxygenNote: 5.0.1
 URL: https://github.com/david-salgado/freadfwf
 BugReports: https://github.com/david-salgado/freadfwf/issues
 Suggests:
