--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ exportClasses(StfwfSchema)
 exportMethods(fread_fwf)
 exportMethods(getdf)
 import(data.table)
+importFrom(methods,new)
 importFrom(openxlsx,read.xlsx)
 importFrom(stringi,stri_sub)
