--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ Imports:
     methods (>= 3.3.2),
     data.table (>= 1.10.4),
     openxlsx (>= 4.0.0),
-    stringi (>= 1.1.7)
+    stringi (>= 1.1.7),
+    qdapRegex (>= 0.7.2)
 License: GPL-3
 LazyData: true
 Encoding: UTF-8
@@ -21,7 +22,7 @@ Collate:
     'XLSToSchema.R'
     'fread_fwf.R'
     'getdf.R'
-RoxygenNote: 5.0.1
+RoxygenNote: 6.1.0
 URL: https://github.com/david-salgado/freadfwf
 BugReports: https://github.com/david-salgado/freadfwf/issues
 Suggests:
