--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,9 @@ export(getdf)
 exportClasses(StfwfSchema)
 exportMethods(fread_fwf)
 exportMethods(getdf)
+exportMethods(show)
 import(data.table)
 importFrom(methods,new)
 importFrom(openxlsx,read.xlsx)
+importFrom(qdapRegex,is.regex)
 importFrom(stringi,stri_sub)
