--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,8 +22,9 @@ Collate:
     'XLSToSchema.R'
     'getdf.R'
     'fread_fwf.R'
+    'getVariables.R'
     'show.R'
-RoxygenNote: 5.0.1
+RoxygenNote: 6.1.0
 URL: https://github.com/david-salgado/fastReadfwf
 BugReports: https://github.com/david-salgado/fastReadfwf/issues
 Suggests:
