--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ Collate:
     'fread_fwf.R'
     'getLengths.R'
     'getVariables.R'
+    'getinitialPos.R'
     'show.R'
 RoxygenNote: 6.1.0
 URL: https://github.com/david-salgado/fastReadfwf
