--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ Collate:
     'getdf.R'
     'fread_fwf.R'
     'getLengths.R'
+    'getRegEx.R'
     'getTypes.R'
     'getVariables.R'
     'getfinalPos.R'
