Update man pages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,22 @@
 
 export(XLSToSchema)
 export(fread_fwf)
+export(getLengths)
+export(getRegEx)
+export(getTypes)
+export(getVariables)
 export(getdf)
+export(getfinalPos)
+export(getinitialPos)
 exportClasses(StfwfSchema)
 exportMethods(fread_fwf)
+exportMethods(getLengths)
+exportMethods(getRegEx)
+exportMethods(getTypes)
+exportMethods(getVariables)
 exportMethods(getdf)
+exportMethods(getfinalPos)
+exportMethods(getinitialPos)
 exportMethods(show)
 import(data.table)
 importFrom(methods,new)
