--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,8 @@ Collate:
     'getTypes.R'
     'getfinalPos.R'
     'getinitialPos.R'
+    'setdf.R'
+    'setLengths.R'
     'show.R'
 RoxygenNote: 6.1.0
 URL: https://github.com/david-salgado/fastReadfwf
