--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,16 +21,17 @@ Collate:
     'StfwfSchema-class.R'
     'XLSToSchema.R'
     'getdf.R'
-    'fread_fwf.R'
     'getVariables.R'
+    'getTypes.R'
+    'fread_fwf.R'
     'getLengths.R'
     'getRegEx.R'
-    'getTypes.R'
     'getfinalPos.R'
     'getinitialPos.R'
     'setdf.R'
     'setLengths.R'
     'show.R'
+    'validateValues.R'
 RoxygenNote: 6.1.0
 URL: https://github.com/david-salgado/fastReadfwf
 BugReports: https://github.com/david-salgado/fastReadfwf/issues
