Create new setters

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,12 +24,15 @@ Collate:
     'getVariables.R'
     'getTypes.R'
     'fread_fwf.R'
-    'getLengths.R'
     'getRegEx.R'
+    'getWidths.R'
     'getfinalPos.R'
     'getinitialPos.R'
     'setdf.R'
-    'setLengths.R'
+    'setRegEx.R'
+    'setWidths.R'
+    'setfinalPos.R'
+    'setinitialPos.R'
     'show.R'
     'validateValues.R'
 RoxygenNote: 6.1.0
