--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,11 +13,13 @@ Imports:
     data.table (>= 1.10.4),
     openxlsx (>= 4.0.0),
     stringi (>= 1.1.7),
-    qdapRegex (>= 0.7.2)
+    qdapRegex (>= 0.7.2),
+    readr (>= 1.0.0)
 License: GPL-3
 LazyData: true
 Encoding: UTF-8
 Collate:
+    'CSVToSchema.R'
     'StfwfSchema-class.R'
     'XLSToSchema.R'
     'getdf.R'
@@ -35,7 +37,7 @@ Collate:
     'setinitialPos.R'
     'show.R'
     'validateValues.R'
-RoxygenNote: 6.1.0
+RoxygenNote: 5.0.1
 URL: https://github.com/david-salgado/fastReadfwf
 BugReports: https://github.com/david-salgado/fastReadfwf/issues
 Suggests:
