Develop fwrite_fwf

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("setdf<-")
 export(csvToSchema)
 export(fread_fwf)
+export(fwrite_fwf)
 export(getRegEx)
 export(getTypes)
 export(getVariables)
@@ -19,6 +20,7 @@ export(xlsxToSchema)
 exportClasses(StfwfSchema)
 exportMethods("setdf<-")
 exportMethods(fread_fwf)
+exportMethods(fwrite_fwf)
 exportMethods(getRegEx)
 exportMethods(getTypes)
 exportMethods(getVariables)
@@ -38,4 +40,5 @@ importFrom(openxlsx,read.xlsx)
 importFrom(qdapRegex,is.regex)
 importFrom(readr,fwf_widths)
 importFrom(readr,read_fwf)
+importFrom(stringi,stri_join)
 importFrom(stringi,stri_sub)
