--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: fastReadfwf
 Title: Fast read of fwf files with arbitrary input schema
-Version: 0.1.0
+Version: 0.2.0
 Authors@R: c(
     person("David", "Salgado", email = "david.salgado.fernandez@gmail.com", role = c("cre", "aut")),
     person("Jara", "Poch", email = "jarapoch@gmail.com", role = "aut"))
@@ -15,11 +15,13 @@ Imports:
     openxlsx (>= 4.0.0),
     stringi (>= 1.1.7),
     qdapRegex (>= 0.7.2),
-    readr (>= 1.0.0)
+    readr (>= 1.0.0),
+    tibble (>= 2.1.3)
 License: GPL-3
 LazyData: true
 Encoding: UTF-8
 Collate:
+    'MicroDataSNHS.R'
     'StfwfSchema-class.R'
     'csvToSchema.R'
     'fastReadfwf.R'
@@ -27,8 +29,9 @@ Collate:
     'getVariables.R'
     'getTypes.R'
     'fread_fwf.R'
-    'getRegEx.R'
     'getWidths.R'
+    'fwrite_fwf.R'
+    'getRegEx.R'
     'getfinalPos.R'
     'getinitialPos.R'
     'setdf.R'
@@ -39,7 +42,7 @@ Collate:
     'show.R'
     'validateValues.R'
     'xlsxToSchema.R'
-RoxygenNote: 5.0.1
+RoxygenNote: 6.1.1
 URL: https://github.com/david-salgado/fastReadfwf
 BugReports: https://github.com/david-salgado/fastReadfwf/issues
 Suggests:
