--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ exportMethods(show)
 exportMethods(validateValues)
 import(data.table)
 importFrom(methods,new)
+importFrom(methods,validObject)
 importFrom(openxlsx,read.xlsx)
 importFrom(qdapRegex,is.regex)
 importFrom(readr,fwf_widths)
