Changes to validate values before converting types.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,9 @@ export(getWidths)
 export(getdf)
 export(getfinalPos)
 export(getinitialPos)
+export(setChar)
 export(setRegEx)
+export(setTypes)
 export(setWidths)
 export(setfinalPos)
 export(setinitialPos)
@@ -28,7 +30,9 @@ exportMethods(getWidths)
 exportMethods(getdf)
 exportMethods(getfinalPos)
 exportMethods(getinitialPos)
+exportMethods(setChar)
 exportMethods(setRegEx)
+exportMethods(setTypes)
 exportMethods(setWidths)
 exportMethods(setfinalPos)
 exportMethods(setinitialPos)
@@ -43,3 +47,4 @@ importFrom(readr,fwf_widths)
 importFrom(readr,read_fwf)
 importFrom(stringi,stri_join)
 importFrom(stringi,stri_sub)
+importFrom(tibble,as_tibble)
