Local Change in home laptop

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(setinitialPos)
 export(validateValues)
 export(xlsxToSchema)
 exportClasses(StfwfSchema)
+exportMethods("[")
 exportMethods("setdf<-")
 exportMethods(fread_fwf)
 exportMethods(fwrite_fwf)
