--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,6 +40,7 @@ Collate:
     'setfinalPos.R'
     'setinitialPos.R'
     'show.R'
+    'subStfwfSchema.R'
     'validateValues.R'
     'xlsxToSchema.R'
 RoxygenNote: 6.1.1
