Fix NOTE no binding values

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(setTypes)
 export(setWidths)
 export(setfinalPos)
 export(setinitialPos)
+export(show)
 export(validateValues)
 export(xlsxToSchema)
 exportClasses(StfwfSchema)
