--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: fastReadfwf
 Title: Fast read of fwf files with arbitrary input schema
-Version: 0.2.14
+Version: 0.2.15
 Authors@R: c(
     person("David", "Salgado", email = "david.salgado.fernandez@gmail.com", role = c("cre", "aut")),
     person("Jara", "Poch", email = "jarapoch@gmail.com", role = "aut"))
@@ -50,5 +50,5 @@ BugReports: https://github.com/david-salgado/fastReadfwf/issues
 Suggests:
     knitr,
     rmarkdown,
-    testthat
+    testthat (>= 2.1.0)
 VignetteBuilder: knitr
