--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: fastReadfwf
 Title: Fast read of fwf files with arbitrary input schema
-Version: 0.3.0
+Version: 0.3.1
 Authors@R: c(
     person("David", "Salgado", email = "david.salgado.fernandez@gmail.com", role = c("cre", "aut")),
     person("Jara", "Poch", email = "jarapoch@gmail.com", role = "aut"))
@@ -16,7 +16,9 @@ Imports:
     stringi (>= 1.1.7),
     qdapRegex (>= 0.7.2),
     readr (>= 1.0.0),
-    tibble (>= 2.1.1)
+    tibble (>= 2.1.1),
+    xml2 (>= 1.3.2),
+    purrr (>= 0.3.4)
 License: GPL-3
 LazyData: true
 Encoding: UTF-8
