--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,10 @@ Collate:
     'show.R'
     'validateValues.R'
     'xlsxToSchema.R'
-RoxygenNote: 6.1.1
+    'xlsxToXML.R'
+    'xlsxToXMLToSchema.R'
+    'xmlToSchema.R'
+RoxygenNote: 7.1.1
 URL: https://github.com/david-salgado/fastReadfwf
 BugReports: https://github.com/david-salgado/fastReadfwf/issues
 Suggests:
