--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ Collate:
     'StfwfSchema-class.R'
     'csvToSchema.R'
     'fastReadfwf.R'
+    'formatoR2regex.R'
     'getdf.R'
     'getVariables.R'
     'getTypes.R'
@@ -46,6 +47,7 @@ Collate:
     'show.R'
     'validateValues.R'
     'xlsxToSchema.R'
+    'formatoR2regex'
     'xlsxToXML.R'
     'xlsxToXMLToSchema.R'
     'xmlToSchema.R'
