--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,11 @@
 
 export("setdf<-")
 export()
-export(csvToSchema)
+export(INExlsxToXML)
+export(INExmlToSchema)
+export(StcsvToSchema)
+export(StxlsxToSchema)
+export(formatoR2regex)
 export(fread_fwf)
 export(fwrite_fwf)
 export(getRegEx)
@@ -20,9 +24,6 @@ export(setfinalPos)
 export(setinitialPos)
 export(show)
 export(validateValues)
-export(xlsxToSchema)
-export(xlsxToXML)
-export(xmlToSchema)
 exportClasses(StfwfSchema)
 exportMethods("setdf<-")
 exportMethods(fread_fwf)
