--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: fastReadfwf
 Title: Fast read of fwf files with arbitrary input schema
-Version: 0.4.1
+Version: 0.4.2
 Authors@R: c(
     person("David", "Salgado", email = "david.salgado.fernandez@gmail.com", role = c("cre", "aut")),
     person("Jara", "Poch", email = "jarapoch@gmail.com", role = "ctb"),
@@ -21,7 +21,8 @@ Imports:
     tibble (>= 2.1.1),
     xml2 (>= 1.3.2),
     purrr (>= 0.3.4),
-	dplyr (>= 0.8.0)
+    dplyr (>= 0.8.0),
+    rlang (>= 1.1.3)
 License: GPL-3
 LazyData: true
 Encoding: UTF-8
