--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ exportMethods(show)
 exportMethods(validateValues)
 import(data.table)
 import(openxlsx)
+import(rlang)
 import(xml2)
 importFrom(methods,new)
 importFrom(methods,validObject)
